# ultraviewer

./: README.md  install-offline.sh  pyproject.toml
docs/superpowers/plans/: 2026-03-22-ultraviewer-implementation.md
docs/superpowers/specs/: 2026-03-22-ultraviewer-design.md
tests/: conftest.py  test_api_browse.py  test_api_execution.py  test_api_results.py  test_api_suites.py  test_api_tabs.py  test_db.py  test_runner.py  test_scanner.py
ultraviewer/: __init__.py  __main__.py  db.py  main.py  models.py  runner.py  scanner.py
ultraviewer/api/: browse.py  execution.py  results.py  suites.py  tabs.py
ultraviewer/static/: app.js  index.html  style.css
ultraviewer/static/components/: ContentPanel.js  FolderBrowser.js  SuiteSettings.js  TabBar.js  TreeView.js
ultraviewer/static/components/renderers/: DiffRenderer.js  HtmlRenderer.js  SectionsRenderer.js  TableRenderer.js
