[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ultraviewer"
version = "0.1.0"
description = "Universal folder-based dashboard for script execution and result visualization"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=11.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
ultraviewer = "ultraviewer.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
